--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 requests==2.31.0
-pydantic==2.5.0
+pydantic==1.10.12
 openai==1.3.0
 python-multipart==0.0.6
---find-links https://download.pytorch.org/whl/torch_stable.html
