--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ fastapi==0.115.6
 uvicorn==0.30.6
 pydantic==2.9.2
 requests==2.32.3
-openai==1.51.0
+openai>=1.51.0 
 python-multipart==0.0.9
+openai>=1.51.0
+httpx>=0.28.1
